--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <label style="margin-left:20px;">請輸入關鍵字過濾(如基隆市中正區):
         <input id="myInput" type="text" placeholder="Search.." />
         <input id="search" type="button" value="過濾" /></label><br>
-    <label><input style="margin-left:20px;" id="all" type="button" value="全部顯示" /></label>
-    <br>
+    <label><input id="all" style="margin-left:20px;" type="button" value="全部顯示" /></label>
+    <br><span id="msg" style="margin-left:20px;">(載入全部資料需花一點時間，請稍候)</span>
 
     <div class="loader" id="loading" style="margin:20px;"></div>
 
@@ -106,9 +106,11 @@
                     "</div>";
                 $("#list").append(content);
                 $("#loading").hide();
+                $("#msg").hide();
             }
         });
 
+        //Filter data based on the user input
         $("#search").on("click", function () {
             var value = $("#myInput").val();
             $("#list div").filter(function () {
@@ -116,7 +118,9 @@
             });
         });
 
+        //Show all data
         $("#all").on("click", function () {
+            $("#msg").show();
             $("#list").hide();
             $("#loading").show("fast", function () {
                 $("#myInput").val("");
@@ -124,6 +128,7 @@
                     $(this).toggle(true);
                     $("#loading").hide();
                     $("#list").show();
+                    $("#msg").hide();
                 });
             });
         });
