Confirm the input field blank when the page is reload

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         var jsonUrl = "TW-pharmacy.json";
 
         $("#search").attr("disabled", true);
+        $("#myInput").val("");
 
         $.getJSON(jsonUrl, function (data) {
             for (var item in data) {
