--- a/index.html
+++ b/index.html
@@ -6,56 +6,15 @@
     <meta charset="utf-8">
     <meta name="author" content="SOSELab@NTOU">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style type="text/css">
-        body {
-            font-family: Helvetica, "Microsoft YaHei", "LiHei Pro", TW-Kai;
-            font-size: 3vmin;
-        }
 
-        h5 {
-            font-size: 4vmin;
-        }
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        h6,
-        label {
-            font-size: 3.5vmin;
-        }
+    <link rel="stylesheet" href="pharmacyStyle.css">
 
-        .loader {
-            border: 16px solid #f3f3f3;
-            border-radius: 50%;
-            border-top: 16px solid #3498db;
-            width: 200px;
-            height: 200px;
-            -webkit-animation: spin 2s linear infinite;
-            /* Safari */
-            animation: spin 2s linear infinite;
-        }
-
-        /* Safari */
-        @-webkit-keyframes spin {
-            0% {
-                -webkit-transform: rotate(0deg);
-            }
-
-            100% {
-                -webkit-transform: rotate(360deg);
-            }
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+    </script>
+
+    <script type="text/javascript" src="pharmacyHandler.js">
     </script>
 </head>
 
@@ -84,61 +43,6 @@
     <div class="card" style="margin:20px;" id="list">
     </div>
 
-    <script type="text/javascript">
-
-        var jsonUrl = "TW-pharmacy.json";
-
-        $("#search").attr("disabled", true);
-        $("#myInput").val("");
-
-        $.getJSON(jsonUrl, function (data) {
-            for (var item in data) {
-
-                if (data[item].closingDate != "") continue;
-
-                let addr = data[item].address ? data[item].address : "住址無資料";
-                let tel = data[item].tel ? data[item].tel : "電話無資料";
-                let mapURL = data[item].address ? "https://www.google.com/maps?q=" + data[item].name + "+" + data[item].address : "https://www.google.com/maps?q=" + data[item].name;
-
-                //Add new card body
-                var content = "<div class='card-body' style='border-bottom: solid lightgrey 1px;'>" +
-                    "<h5 class='card-title' >" + data[item].id + ": " + data[item].name + "</h5>" +
-                    "<h6 class='card-subtitle mb-2 text-muted'>" + addr + "<br>" + tel + "</h6> " +
-                    "<a href = '" + mapURL + "' target='_blank' class='card-link' > 地圖連結</a >" +
-                    "<a href = 'http://www.nhi.gov.tw/QueryN/Query3_Detail.aspx?HospID=" + data[item].id + "' target='_blank' class='card-link' > 健康保險署連結</a >" +
-                    "</div>";
-                $("#list").append(content);
-                $("#loading").hide();
-                $("#msg").hide();
-                $("#search").attr("disabled", false);
-            }
-        });
-
-        //Filter data based on the user input
-        $("#search").on("click", function () {
-            var value = $("#myInput").val();
-            $("#list div").filter(function () {
-                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1);
-            });
-        });
-
-        //Show all data
-        $("#all").on("click", function () {
-            $("#msg").show();
-            $("#myInput").val("");
-            $("#search").attr("disabled", true);
-            $("#list").hide();
-            $("#loading").show("fast", function () {
-                $("#list div").filter(function () {
-                    $(this).toggle(true);
-                    $("#loading").hide();
-                    $("#list").show();
-                    $("#msg").hide();
-                    $("#search").attr("disabled", false);
-                });
-            });
-        });
-    </script>
 </body>
 
 </html>
