--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h5 class="card-title">健保診所</h5>
             <h6 class="card-subtitle mb-2 text-muted">住址與電話</h6>
             <a href="#" class="card-link">地圖連結</a>
-            <a href="#" class="card-link">健康保險署連結</a>
+            <a href="#" class="card-link">中央健保署連結</a>
         </div>
     </div>
     -->
