--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>健保診所列表</title>
+    <title>健保特約藥局列表</title>
     <meta charset="utf-8">
     <meta name="author" content="SOSELab@NTOU">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,7 +31,7 @@
     </div>
     -->
 
-    <h5 style="margin:20px;color:navy">健保診所列表</h5>
+    <h5 style="margin:20px;color:navy">健保特約藥局列表</h5>
     <label style="margin-left:20px;">請輸入關鍵字過濾(如基隆市中正區):
         <input id="myInput" type="text" placeholder="Search.." />
         <input id="search" type="button" value="過濾" /></label><br>
